fixed one pixel gap

--- a/frontend/person/person2.css
+++ b/frontend/person/person2.css
@@ -188,11 +188,11 @@ body{
         .description_by_years{
             display: grid;
             grid-template-columns: 1fr 2fr;
-            min-height: calc(100vh - 2rem - 18px);
+            min-height: calc(100vh - 2rem - 17px);
             
             .map{
                 width: 100%;
-                height: calc(100vh - 2rem - 18px);
+                height: calc(100vh - 2rem - 17px);
                 background-image: url(../src/frame3.jpg);
                 background-size: cover;
                 background-repeat: no-repeat;
